# WeRace-Timing

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.claude/skills/werace-dev/: SKILL.md
backend/: env.example  pyproject.toml  requirements.txt
backend/app/: cards.py  config.py  events.py  hub.py  main.py  models.py  recorder.py  security.py  snapshots.py  state.py  timeparse.py  tracks.py
backend/app/routers/: admin.py  export.py  live.py  public.py  results.py  team.py
backend/app/sources/: apex.py  base.py  mywer.py  replay.py  simulator.py
backend/tests/: test_apex.py  test_api.py  test_export.py  test_mywer.py  test_progress_and_pits.py  test_rollover_and_flag.py  test_snapshots.py  test_source_lifecycle.py  test_state_and_tokens.py  test_timeparse.py
backend/tests/fixtures/: christel.ndjson  cremona.ndjson  cremona_practice.ndjson  rozzano.ndjson
deploy/: Caddyfile
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccentPicker.tsx  DriverDetail.tsx  FlagBanner.tsx  LapCharts.tsx  MessageOverlay.tsx  OrderToggle.tsx  PageNav.tsx  PenaltyEditor.tsx  PenaltyLog.tsx  SafewordGate.tsx  SessionResult.tsx  SnapshotLapCharts.tsx  StatusBar.tsx  StoryStudio.tsx  TeamStoryCard.tsx  TeamStoryStudio.tsx  TimesheetPanel.tsx  TimingTable.tsx  Toast.tsx  Toasts.tsx  TrackRing.tsx
frontend/src/lib/: api.ts  format.ts  i18n.tsx  lapProgress.ts  nav.ts  penalties.ts  story.ts  teamStory.ts  teamStoryRender.ts  types.ts  useLive.ts  useSnapshot.ts  weraceLogo.ts  ws.ts
(+13 files in other folders)
