[project]
name = "werace-bridge"
version = "0.1.0"
description = "Live karting timing relay and dashboard suite (MyWeR / Apex Timing)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "qrcode[pil]>=8.0",
    "reportlab>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
